# taoq

./: .gitignore  CMakeLists.txt  README.md  quotes.txt  shell.nix  vcpkg.json
src/: main.cpp
